# doppelganger

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  split.py  test_voice.py  train.py  transcribe.py
alembic/: env.py
alembic/versions/: 001_create_initial_tables.py  001_create_initial_tables.sql  002_add_username_to_users.py  003_add_engine_to_characters.py
archive/orpheus-fine-tune/: README.md  fine-tune.sh  inference.py  pyproject.toml  split_audio.py  tokenize_audio.py  train_lora.py
docker/: api.Dockerfile  prometheus.yml
docs/: bot-setup.md  lora-tuning.md
doppel-core/: pyproject.toml  test-chatterbox.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte
frontend/src/components/: AudioPlayer.svelte  CharacterTuningPanel.svelte  DataTable.svelte  EmptyState.svelte  Header.svelte  Layout.svelte  Modal.svelte  Sidebar.svelte  Spinner.svelte  StatusBadge.svelte  ToastContainer.svelte
frontend/src/lib/: api.js  api.ts  format.js  format.ts  polling.js  polling.ts  toast.ts  users.js  users.ts
frontend/src/pages/: Cache.svelte  Characters.svelte  Config.svelte  Dashboard.svelte  Metrics.svelte  Playground.svelte  Queue.svelte  System.svelte  UserDetail.svelte  Users.svelte
frontend/src/styles/: global.css  global.scss
scripts/: prepare_audio.py  train_lora.py  transcribe_audio.py
src/doppelganger/: _warnings.py  app.py  config.py  logging.py
src/doppelganger/api/: audit.py  cache.py  characters.py  config.py  errors.py  health.py  middleware.py  queue.py  requests.py  status.py  system.py  tts.py  users.py
src/doppelganger/bot/: checks.py  client.py  queue.py  voice.py
src/doppelganger/bot/cogs/: tts.py
src/doppelganger/db/: engine.py  request_status.py  types.py
src/doppelganger/db/queries/: audit_log.py  characters.py  tts_requests.py  users.py
src/doppelganger/models/: audit.py  cache.py  common.py  config.py  queue.py  schemas.py  status.py  system.py  tts.py  users.py
src/doppelganger/tts/: audio_validation.py  cache.py  chatterbox.py  engine.py  exceptions.py  gpu.py  orpheus.py  service.py  snac_constants.py  snac_decoder.py  snac_encoder.py  voice_registry.py
tests/: conftest.py  test_config.py
tests/api/: test_audit.py  test_cache.py  test_characters.py  test_health.py  test_requests.py  test_status.py  test_system.py  test_tts.py  test_users.py
tests/bot/: test_checks.py  test_cog.py  test_queue.py  test_voice.py
tests/integration/: test_api_integration.py  test_db_queries.py
tests/models/: test_schemas.py
tests/tts/: test_audio_validation.py  test_cache.py  test_chatterbox.py  test_gpu.py  test_orpheus.py  test_service.py  test_snac_decoder.py  test_snac_encoder.py  test_voice_registry.py
