[project]
name = "doppelganger"
version = "0.1.0"
description = "TTS voice cloning Discord bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "discord.py[voice]>=2.4.0",
]

[project.optional-dependencies]
tts = ["chatterbox-tts>=0.1.6", "setuptools>=75.0.0,<81"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "testcontainers[postgres]>=4.0.0",
    "ruff>=0.9.0",
    "basedpyright>=1.25.0",
]

[tool.uv]
override-dependencies = ["numpy>=1.26.0,<2.4", "ml-dtypes>=0.3.0", "pandas>=2.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doppelganger"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "S", "T20", "SIM", "TCH"]
ignore = ["SIM108"]  # block form if/else

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104"]
"src/doppelganger/config.py" = ["S104"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires Docker (testcontainers)"]
