[project]
name = "doppel-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chatterbox-tts>=0.1.4",
    # fixes for chatterbox-tts
    "onnx==1.18",
    "torchcodec>=0.8.1",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "diffusers>=0.24.0",
    "resemble-perth>=1.0.1",
    "conformer>=0.3.2",
    "safetensors>=0.4.0",
    "pykakasi>=2.3.0",
    #"gradio==4.19.1",
    "typer>=0.12,<1.0",
    "setuptools>=80.9.0",
]

# fix for chatterbox-tts
[tool.uv.extra-build-dependencies]
pkuseg = ["numpy>=1.24.0,<1.26.0"]
