[project]
name = "doppel-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "accelerate>=1.0.0",
  "bitsandbytes<0.46.0",
  "datasets>=2.16.0",
  "faster-whisper>=1.0.0",
  "librosa>=0.10.0",
  "nvidia-cublas-cu12>=12.4.5.8",
  "nvidia-cudnn-cu12>=9.1.0.70",
  "pydub>=0.25.1",
  "snac>=1.2.1",
  "torch>=2.5.0",
  "torchaudio>=2.5.0",
  "torchcodec>=0.9.0",
  "torchvision>=0.20.0",
  "transformers>=4.46.0",
  "trl<=0.23.0",
  "unsloth<2025.10.0",
  "xformers>=0.0.28",
]

[tool.uv]
environments = [
  "sys_platform == 'linux'",
]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
torchaudio = [
  { index = "pytorch-cu128" },
]
torchvision = [
  { index = "pytorch-cu128" },
]
xformers = [
  { index = "pytorch-cu128" },
]
